# cpp-boilerplate

./: .gitignore  CMakeLists.txt  compile-and-run-debug.sh  compile-and-run-release.sh
src/: main.cpp
